--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bus Pass System</title>
+  <title>About</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -49,7 +49,7 @@
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+      <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
           style="max-width: 70px; padding-left: 7px;"></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -93,7 +93,7 @@
             <h1 class="text-white" style=" font-weight: 500; font-size: 80px;  text-shadow: 2px 2px 4px #000000;">ABOUT
             </h1>
             <div style="font-size: 17px; font-weight: 500;">
-              <a href="index.html"
+              <a href="/"
                 style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
               <span class="mx-2 text-white">&bullet;</span>
 
@@ -102,7 +102,7 @@
                 style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Bus
                 Details</a>
               <span class="mx-2 text-white">&bullet;</span>
-              <a href="Form.html"
+              <a href="login.html"
                 style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Manage
                 Pass</a>
             </div>
@@ -127,12 +127,13 @@
             <h2 class="font-weight-light text-black mb-4">Bus Pass System</h2>
             <p>Bus Pass System is developed using HTML, CSS and Javascript as Front-end technologies.
               Bus pass registration is useful for passengers who are facing problems with the current manual work of bus
-              pass registration and renewal. His/her renewal or registration can be done through online transaction. In
+              pass registration. His/her registration can be done through online transaction. In
               the manual system, the user has to go on particular date and time, if they fail then the renewal cannot be
-              done. This online bus pass system application will help candidates save their time and renewal bus pass
+              done. This online bus pass system application will help candidates save their time and register bus pass
               without standing in a line for hours. Initially user needs to register with the application by submitting
               their details through online. The administrator will verify the candidate username and password and
-              renewal are performed. The renewal process is carried by paying the money using the online transaction.
+              can grab their pass or can edit it. The process is carried by paying the money using the online
+              transaction.
             </p>
 
           </div>
@@ -175,11 +176,10 @@
         <div class="col-md-6 mx-auto">
 
           <!-- Content -->
-          <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
-            amet,
-            consectetur
-            adipisicing elit.</p>
+          <h5 class="font-weight-bold text-white mt-3 mb-4">BUS PASS</h5>
+          <p>Bus Pass System is developed using HTML, CSS and Javascript as Front-end technologies.
+            Bus pass registration is useful for passengers who are facing problems with the current manual work of bus
+            pass registration.</p>
 
         </div>
         <!-- Grid column -->
@@ -218,7 +218,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <i class="fa fa-home"> </i><a href="index.html"> Home</a>
+              <i class="fa fa-home"> </i><a href="/"> Home</a>
             </li>
             <li>
               <i class="fa fa-bus"> </i><a href="about.html"> About</a>
@@ -227,7 +227,7 @@
               <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
             </li>
             <li>
-              <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
+              <i class="fa fa-ticket"> </i><a href="login.html"> Manage Pass</a>
             </li>
             <li>
               <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
