--- a/bus_details.html
+++ b/bus_details.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Bus Pass System</title>
+  <title>Bus Details</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -70,13 +70,13 @@
           <h1 class="text-white" style=" font-weight: 500; font-size: 80px; text-shadow: 2px 2px 4px #000000;">BUS
             DETAILS</h1>
           <div style="font-size: 17px; font-weight: 500;">
-            <a href="index.html"
+            <a href="/"
               style="color: rgb(236, 234, 234); text-shadow:2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
             <span class="mx-2 text-white">&bullet;</span>
             <a href="about.html"
               style="color: rgb(236, 234, 234); text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">About</a>
             <span class="mx-2 text-white">&bullet;</span>
-            <a href="Form.html"
+            <a href="login.html"
               style="color: rgb(236, 234, 234); text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Manage
               Pass</a>
 
@@ -357,11 +357,10 @@
         <div class="col-md-6 mx-auto">
 
           <!-- Content -->
-          <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
-          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
-            amet,
-            consectetur
-            adipisicing elit.</p>
+          <h5 class="font-weight-bold text-white mt-3 mb-4">BUS PASS</h5>
+          <p>Bus Pass System is developed using HTML, CSS and Javascript as Front-end technologies.
+            Bus pass registration is useful for passengers who are facing problems with the current manual work of bus
+            pass registration.</p>
 
         </div>
         <!-- Grid column -->
@@ -409,7 +408,7 @@
               <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
             </li>
             <li>
-              <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
+              <i class="fa fa-ticket"> </i><a href="login.html"> Manage Pass</a>
             </li>
             <li>
               <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
