--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
                 <div class="col-md-6 mx-auto">
 
                     <!-- Content -->
-                    <h5 class="font-weight-bold text-white mt-3 mb-4">Footer Content</h5>
-                    <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit
-                        amet,
-                        consectetur
-                        adipisicing elit.</p>
+                    <h5 class="font-weight-bold text-white mt-3 mb-4">BUS PASS</h5>
+                    <p>Bus Pass System is developed using HTML, CSS and Javascript as Front-end technologies.
+                        Bus pass registration is useful for passengers who are facing problems with the current manual
+                        work of bus
+                        pass registration.</p>
 
                 </div>
                 <!-- Grid column -->
@@ -339,7 +339,7 @@
                             <i class="fa fa-envelope"> </i><a href="contact.html"> Contact</a>
                         </li>
                         <li>
-                            <i class="fa fa-ticket"> </i><a href="Form.html"> Manage Pass</a>
+                            <i class="fa fa-ticket"> </i><a href="login.html"> Manage Pass</a>
                         </li>
                         <li>
                             <i class="fa fa-info"> </i><a href="bus_details.html"> Bus Details</a>
