--- a/EditAndPrintPass.html
+++ b/EditAndPrintPass.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Print Pass</title>
+    <title>Edit or Print Pass</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/PrintPass.css">
@@ -43,8 +43,8 @@
 
         </table>
         <div class="button">
+            <button type="submit" id="edit" style=" margin-top: 50px;" onclick="location.href='Form.html'">Edit</button>
             <button type="submit" id="pdf" style=" margin-top: 50px;">Download</button>
-            <button type="submit" id="edit" style=" margin-top: 50px;" onclick="done()">Done</button>
         </div>
 
     </div>
