--- a/Form.html
+++ b/Form.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manage Pass</title>
+    <title>Registeration</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/Form.css">
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -26,7 +26,7 @@
             <div class="row justify-align-center align-items-center">
                 <div class="col">
                     <div class="header">
-                        <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">MANAGE PASS</h2>
+                        <h2 style="text-shadow: 1px 1px 2px #ffffffe3;">REGISTER</h2>
                     </div>
                     <form class="form" id="form">
                         <div class="form-control">
