--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
       style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
-      <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-          style="max-width: 70px; padding-left: 7px;"></a>
+      <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
+          alt="calligraphy-fonts" border="0" style="max-width: 70px; padding-left: 7px;"></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
