--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             <h1 class="text-white" style=" font-weight: 500; font-size: 80px;  text-shadow: 2px 2px 4px #000000;">ABOUT
             </h1>
             <div style="font-size: 17px; font-weight: 500;">
-              <a href="/"
+              <a href="https://sameeksharathi.github.io/Full-Stack-Project/"
                 style="color: rgb(236, 234, 234);  text-shadow: 2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
               <span class="mx-2 text-white">&bullet;</span>
 
@@ -218,7 +218,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <i class="fa fa-home"> </i><a href="/"> Home</a>
+              <i class="fa fa-home"> </i><a href="https://sameeksharathi.github.io/Full-Stack-Project/"> Home</a>
             </li>
             <li>
               <i class="fa fa-bus"> </i><a href="about.html"> About</a>
