--- a/bus_details.html
+++ b/bus_details.html
@@ -53,8 +53,8 @@
   </div>
 
   <nav class="navbar navbar-light navbar-expand-xl fixed-top" style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
-    <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-        style="max-width: 70px; padding-left: 7px;"></a>
+    <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
+        alt="calligraphy-fonts" border="0" style="max-width: 70px; padding-left: 7px;"></a>
     <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -70,7 +70,7 @@
           <h1 class="text-white" style=" font-weight: 500; font-size: 80px; text-shadow: 2px 2px 4px #000000;">BUS
             DETAILS</h1>
           <div style="font-size: 17px; font-weight: 500;">
-            <a href="/"
+            <a href="https://sameeksharathi.github.io/Full-Stack-Project/"
               style="color: rgb(236, 234, 234); text-shadow:2px 2px 4px black, 0 0 25px rgb(129, 121, 121), 0 0 2px rgb(196, 184, 184);">Home</a>
             <span class="mx-2 text-white">&bullet;</span>
             <a href="about.html"
@@ -399,7 +399,7 @@
 
           <ul class="list-unstyled">
             <li>
-              <i class="fa fa-home"> </i><a href="/"> Home</a>
+              <i class="fa fa-home"> </i><a href="https://sameeksharathi.github.io/Full-Stack-Project/"> Home</a>
             </li>
             <li>
               <i class="fa fa-bus"> </i><a href="about.html"> About</a>
