--- a/login.html
+++ b/login.html
@@ -14,8 +14,8 @@
 <body>
     <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 760px; width: 100%"
         data-aos="fade" data-stellar-background-ratio="0.5">
-        <a class="navbar-brand" href="/"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-                style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
+        <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
+                alt="calligraphy-fonts" border="0" style="width: 70px; padding-left: 10px; padding-top: 10px;"></a>
         <div class="content">
             <div class="container">
                 <div class="row justify-align-center align-items-center">
