--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
                 <div class="col-md-12">
                     <h1 class="text-white font-weight-bold" style="text-shadow: 2px 2px 4px #000000;">Bus Pass System
                     </h1>
-                    <p class="mb-5">A bus ride is like being in another world.</p>
+                    <p class="mb-5" style="font-weight: 200; color:#d8d0d0;text-shadow: 2px 2px 4px #000000;">A bus ride
+                        is like
+                        being in another
+                        world.
+                    </p>
                     <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
                     </p>
                     <!-- <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p> -->
