--- a/Form.html
+++ b/Form.html
@@ -94,7 +94,7 @@
                             <small>Error msg</small>
                         </div>
                         <div class="button">
-                            <button type="submit" id="submit" onclick="Proceed()"
+                            <button type="submit" id="submit"
                                 style="color: white; text-decoration: none; padding: auto; text-align: center;">Proceed</button>
                         </div>
                     </form>
