--- a/Payment.html
+++ b/Payment.html
@@ -70,10 +70,9 @@
                             <small>Error msg</small>
                         </div>
                         <div class="button">
-                            <button type="submit" onclick="location.href='Form.html'"
+                            <button onclick="location.href='Form.html'"
                                 style="color: white; text-decoration: none;">Previous</button>
-                            <button type="submit" onclick="Proceed()"
-                                style="color: white; text-decoration: none;">Submit</button>
+                            <button type="submit" style="color: white; text-decoration: none;">Submit</button>
                         </div>
                     </form>
                 </div>
