--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
                                 <small></small>
                             </div>
                             <div class="button">
-                                <button type="submit" id="submit" onclick="Proceed()"
+                                <button type="submit" id="submit"
                                     style="color: white; text-decoration: none; padding: auto; text-align: center;">Login</button>
                             </div>
                         </form>
