--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
                                 <small></small>
                             </div>
 
-                            <div class="form-control">
+                            <div class="form-control pas">
                                 <label for="password">Password</label>
                                 <input type="password" id="password" placeholder="Choose Password">
                                 <i class="fa fa-check-circle"></i>
