--- a/EditAndPrintPass.html
+++ b/EditAndPrintPass.html
@@ -12,38 +12,53 @@
 
 <body>
     <div class="container">
-        <h2 style="text-decoration: underline; text-align: center;">Bus Pass</h2>
-        <table id="table">
-            <th></th>
-            <th></th>
-            <tr>
-                <td>Name</td>
-                <td id="name"></td>
-            </tr>
-            <tr>
-                <td>Email</td>
-                <td id="email"></td>
-            </tr>
-            <tr>
-                <td>Mobile No.</td>
-                <td id="mob"></td>
-            </tr>
-            <tr>
-                <td>Validity</td>
-                <td id="valid"></td>
-            </tr>
-            <tr>
-                <td>Destination</td>
-                <td id="destination"></td>
-            </tr>
-            <tr>
-                <td>Payment</td>
-                <td id="payment"></td>
-            </tr>
+        <h2
+            style="text-decoration: underline; text-align: center; padding-bottom: 25px; text-shadow: 1px 1px 3px #8a8989e3;">
+            Bus Pass</h2>
+        <div class="row ">
+            <div class="col-lg-12 col-md-6 col-2">
+
+                <table id=" table">
+                    <th></th>
+                    <th></th>
+                    <tr>
+                        <td>Name</td>
+                        <td id="name"></td>
+                    </tr>
+                    <tr>
+                        <td>Email</td>
+                        <td id="email"></td>
+                    </tr>
+                    <tr>
+                        <td>Mobile No.</td>
+                        <td id="mob"></td>
+                    </tr>
+                    <tr>
+                        <td>Validity</td>
+                        <td id="valid"></td>
+                    </tr>
+                    <tr>
+                        <td>Destination</td>
+                        <td id="destination"></td>
+                    </tr>
+                    <tr>
+                        <td>Payment</td>
+                        <td id="payment"></td>
+                    </tr>
+                    <tr>
+                        <td>
+                        <td></td>
+                        </td>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
 
         </table>
         <div class="button">
-            <button type="submit" id="edit" style=" margin-top: 50px;" onclick="location.href='Form.html'">Edit</button>
+            <button type="submit" id="edit" style=" margin-top: 50px; margin-right:5px;"
+                onclick="location.href='Form.html'">Edit</button>
             <button type="submit" id="pdf" style=" margin-top: 50px;">Download</button>
         </div>
 
