--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 
 
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/about.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/Bus.css">
+  <link rel="stylesheet" href="css/about.css">
+  <!-- <link rel="stylesheet" href="css/Bus.css"> -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
@@ -90,7 +90,7 @@
         <div class="row align-items-center justify-content-center text-center">
 
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;  text-shadow: 2px 2px 4px #000000;">ABOUT
+            <h1 class="text-white" style="text-shadow: 2px 2px 4px #000000;">ABOUT
             </h1>
             <div style="font-size: 17px; font-weight: 500;">
               <a href="https://sameeksharathi.github.io/Full-Stack-Project/"
