--- a/bus_details.html
+++ b/bus_details.html
@@ -67,7 +67,7 @@
       <div class="row align-items-center justify-content-center text-center ">
 
         <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-          <h1 class="text-white" style=" font-weight: 500; font-size: 80px; text-shadow: 2px 2px 4px #000000;">BUS
+          <h1 class="text-white" style=" text-shadow: 2px 2px 4px #000000;">BUS
             DETAILS</h1>
           <div style="font-size: 17px; font-weight: 500;">
             <a href="https://sameeksharathi.github.io/Full-Stack-Project/"
@@ -332,7 +332,7 @@
         <div class="col-md-12">
           <h2 class="text-black" style="font-size: 20px;">Want To Travel With Us?</h2>
           <hr class="hr-travel" data-aos="fade" data-aos-delay="200">
-          <p class="mb-0"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now</a></p>
+          <p class="mb-0"><a href="Form.html" class="btn btn-primary py-2 px-3 text-white">Book Now!</a></p>
         </div>
       </div>
     </div>
