--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center text-center" style="padding-top: 60px; margin-top:0;">
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="400">
-            <h1 class="text-white" style=" font-weight: 500; font-size: 80px;  text-shadow: 2px 2px 4px #000000;">Get In
+            <h1 class="text-white" style=" text-shadow: 2px 2px 4px #000000;">
+              Get In
               Touch</h1>
             <div style="font-size: 17px;">
               <a href="https://sameeksharathi.github.io/Full-Stack-Project/"
@@ -144,11 +145,11 @@
         <div class="row content">
           <div class="col-lg- mb-5" style="margin: 30px auto;">
 
-            <img src="images/gla.jpg" style="height: 250px; width: 380px; box-shadow: 3px 3px 5px grey;">
+            <img src="images/gla.jpg" style=" box-shadow: 3px 3px 5px grey;">
 
 
           </div>
-          <div class="col-lg-4" style="margin: 25px auto;">
+          <div class="col-lg-4 add" style="">
 
             <div class="p-4 mb-3 bg-white">
               <p class="mb-0 font-weight-bold">Address</p>
