--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
             <div class="row align-items-center justify-content-center text-center main">
 
                 <div class="col-md-12">
-                    <h1 class="text-white font-weight-bold" style="text-shadow: 2px 2px 4px #000000;">Bus Pass System
+                    <h1 class="text-white font-weight-bold"
+                        style="text-shadow: 4px 4px 8px #000000, 1px 1px 2px rgb(121, 118, 118)">Bus Pass System
                     </h1>
                     <p class="mb-5" style="font-weight: 320; color:#d8d0d0;text-shadow: 2px 2px 4px #000000;">A bus ride
                         is like
