--- a/Form.html
+++ b/Form.html
@@ -17,7 +17,8 @@
         style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 730px;">
     </div> -->
 
-    <div class="site-blocks-cover" style="background-image: url(images/formbg.jpeg); height: 900px; width: 98.9vw"
+    <div class="site-blocks-cover"
+        style="background-image: url(images/formbg.jpeg); height: 950px; width: 98.9vw;  padding-left: 6px;"
         data-aos="fade" data-stellar-background-ratio="0.5">
         <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
                 alt="calligraphy-fonts" border="0" style="width: 70px; padding-left: 7px; padding-top: 10px;"></a>
