--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
-      style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+      style=" width: 100%; background-color: rgba(0, 0, 0, 0);  padding-left: 6px;">
       <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
           alt="calligraphy-fonts" border="0" style="max-width: 70px; padding-left: 7px;"></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
@@ -84,7 +84,7 @@
 
     </header> -->
 
-    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/bgimg.jpeg); height: 760px;"
+    <div class="site-blocks-cover inner-page-cover" style="background-image: url(images/bgimg.jpeg); height: 791px; "
       data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container content">
         <div class="row align-items-center justify-content-center text-center">
