--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
     </header> -->
 
     <nav class="navbar navbar-light navbar-expand-xl fixed-top"
-      style=" width: 100%; background-color: rgba(0, 0, 0, 0)">
+      style=" width: 100%; background-color: rgba(0, 0, 0, 0);  padding-left: 6px;">
       <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
           alt="calligraphy-fonts" border="0" style="max-width: 70px; padding-left: 7px;"></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
@@ -111,7 +111,7 @@
 
 
     <div class="site-blocks-cover inner-page-cover"
-      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 760px; opacity:0.96;"
+      style="background-image: url(https://guidetoiceland.imgix.net/469993/x/0/.jpg?auto=format%2Ccompress&fit=crop&crop=faces%2Cedges%2Ccenter&ixlib=react-8.6.4&h=610&q=35&dpr=1); height: 791px; opacity:0.96;"
       data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center" style="padding-top: 60px; margin-top:0;">
