--- a/index.html
+++ b/index.html
@@ -17,37 +17,10 @@
 
 <body>
 
-    <!-- <div class="header">
-        <a class="navbar-brand" href="#"><img
-            src="https://fontmeme.com/permalink/201111/84c7c96adf6c1e34b42a0484503ef01b.png" alt="calligraphy-fonts"
-            border="0"></a>
-    </div>
-    <input type="checkbox" name="" id="check">
-    <label for="check" class = "show-btn"> 
-        <i class = "fa fa-bars"></i>
-    </label>
-    <label for="check" class = "hide-btn"> 
-        <i class = "fa fa-times"></i>
-    </label>
-    <div class="bar">
-        <ul>
-            <li><a href="#"><span>Home</span></a></li>
-            <li><a href="#"></i><span>About</span></a></li>
-            <li><a href="#"><span>Contact</span></a></li>
-            <li><a href="#"><span>Manage Pass</span></a></li>
-            <li><a href="#"><span>Bus Details</span></a></li>
-        </ul>
-        <div class="social">
-            <a href="#"><i class="fa fa-facebook-square"></i></a>
-            <a href="#"><i class="fa fa-youtube-square"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-    </div> -->
-
     <nav id="custom-nav" class="navbar navbar-light navbar-expand-xl fixed-top"
-        style=" width: 100%; background-color: #fff; ">
+        style=" width: 100%; background-color: #fff; padding-left: 6px;">
         <a class="navbar-brand" href="#"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
-                style="max-width: 70px; padding-left: 5px;"></a>
+                style="max-width: 70px; padding-left: 3px; "></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -74,7 +47,7 @@
         </div>
     </nav>
 
-    <div class="site-blocks-cover" style="background-image: url(images/bgimg.jpeg); height: 730px;" data-aos="fade"
+    <div class="site-blocks-cover" style="background-image: url(images/bgimg.jpeg); height: 738px;" data-aos="fade"
         data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row align-items-center justify-content-center text-center main">
@@ -88,9 +61,8 @@
                         being in another
                         world.
                     </p>
-                    <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now!</a>
+                    <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now</a>
                     </p>
-                    <!-- <p><a href="TAFL2-Riya Gaur.pdf" download="Assignment">Download the pdf</a></p> -->
                 </div>
             </div>
         </div>
