--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
                     <h1 class="text-white font-weight-bold"
                         style="text-shadow: 4px 4px 8px #000000, 1px 1px 2px rgb(121, 118, 118)">Bus Pass System
                     </h1>
-                    <p class="mb-5" style="font-weight: 320; color:#d8d0d0;text-shadow: 2px 2px 4px #000000;">A bus ride
-                        is like
-                        being in another
-                        world.
+                    <p class="mb-5" style="font-weight: 320; color:#d8d0d0;text-shadow: 2px 2px 4px #000000;">Time is
+                        precious. Don't waste it. Book ticket online!
                     </p>
                     <p><a href="Form.html" class="btn btn-primary py-3 px-5 text-white font-weight-bold">Book Now</a>
                     </p>
