--- a/Form.html
+++ b/Form.html
@@ -20,8 +20,8 @@
     <div class="site-blocks-cover"
         style="background-image: url(images/formbg.jpeg); height: 950px; width: 98.9vw;  padding-left: 6px;"
         data-aos="fade" data-stellar-background-ratio="0.5">
-        <a class="navbar-brand" href="https://sameeksharathi.github.io/Full-Stack-Project/"><img src="images/logo.png"
-                alt="calligraphy-fonts" border="0" style="width: 70px; padding-left: 7px; padding-top: 10px;"></a>
+        <a class="navbar-brand" href="BusPass.html"><img src="images/logo.png" alt="calligraphy-fonts" border="0"
+                style="width: 70px; padding-left: 7px; padding-top: 10px;"></a>
 
         <div class="container" style="height: 765px; margin-top: 50px;">
             <div class="row justify-align-center align-items-center">
