--- a/BusPass.html
+++ b/BusPass.html
@@ -335,7 +335,7 @@
         <div class="footer-copyright text-center py-3">
             <p>Copyright © 2020 All Rights Reserved by
                 <a href="https://github.com/sameeksharathi/Full-Stack-Project">Bus
-                    Pass </a><a href="" class="top"><i class="fa fa-arrow-circle-up pl-1" style="color: black"></i>
+                    Pass </a><a href="#" class="top"><i class="fa fa-arrow-circle-up pl-1" style="color: black"></i>
                 </a>
             </p>
         </div>
