--- a/EditAndPrintPass.html
+++ b/EditAndPrintPass.html
@@ -59,6 +59,7 @@
         <div class="button">
             <button type="submit" id="edit" style=" margin-top: 50px; margin-right:5px;"
                 onclick="location.href='Form.html'">Edit</button>
+            <button type="submit" id="done" style=" margin-top: 50px; margin-right:5px;" onclick="done()">Done</button>
             <button type="submit" id="pdf" style=" margin-top: 50px;">Download</button>
         </div>
 
